# envoy-avp-authorizer

./: .dockerignore  .gitignore  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.github  LICENSE  README.md  tinytodo_mappings.json
.github/workflows/: ci.yml  release.yml
examples/: envoy-config.yaml  explicit_mappings.json  tinytodo_mappings.json
examples/istio/: istio.md
k8s/: authz-policy.yaml  deployment.yaml  ext-authz-provider.yaml
scripts/: oopsie.sh  release.sh
src/: .dockerignore  auth_cache.rs  authorization_service.rs  custom_types.rs  health.rs  jwt.rs  main.rs  resource_mapper.rs  telemetry.rs
