[package]
name = "envoy-avp-authorizer"
version = "0.1.0"
edition = "2021"

[dependencies]
avp-local-agent = "3.0"
cedar-local-agent = "3.0"
cedar-policy = "4.4.0"
tokio = { version = "1.45", features = ["full"] }
tonic = "0.13"
prost = "0.13"
envoy-types = "0.6"  # Provides the Envoy ext_authz types
jsonwebtoken = "9.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.12.15"
tracing = "0.1"
tracing-subscriber = "0.3"
aws-config = "1.6.3"
aws-sdk-verifiedpermissions = "1.77.0"
aws-types = "1.3.7"
anyhow = "1.0"
async-trait = "0.1"
thiserror = "2.0"
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }