[package]
name = "envoy-avp-authorizer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies (always included)
tokio = { version = "1.45", features = ["full"] }
futures-channel = "0.3"
futures-core = "0.3"
futures-util = "0.3"
tonic = { version = "0.13", features = ["codegen"] }
tonic-health = "0.13"
prost = "0.13"
envoy-types = "0.6"  # Provides the Envoy ext_authz types
jsonwebtoken = "9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.12"
once_cell = "1.21"
tracing = "0.1"
tracing-subscriber = "0.3"
aws-config = "1.6"
aws-sdk-verifiedpermissions = "1.77"
aws-types = "1.3"
anyhow = "1.0"
async-trait = "0.1"
thiserror = "2.0"
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }
url = "2.5"
regex = "1.11"
metrics = "0.24"
metrics-exporter-prometheus = "0.17"
cedar-policy = { version = "4.4"}
cedar-local-agent = { version = "3.0"}
avp-local-agent = { version = "3.0"}