[package]
name = "envoy-avp-authorizer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
aws-config = { version = "1.6", default-features = false, features = ["rustls", "rt-tokio", "credentials-process"] }
aws-sdk-verifiedpermissions = { version = "1.77", default-features = false, features = ["rustls", "rt-tokio"] }
aws-types = "1.3"
clap = { version = "4.5", features = ["derive", "env"] }
envoy-types = "0.6"
futures = "0.3"
futures-channel = "0.3"
futures-core = "0.3"
futures-util = "0.3"
jsonwebtoken = { version = "9.3", default-features = false, features = ["use_pem"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.17"
once_cell = "1.21"
prost = "0.13"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.45", features = ["full"] }
tonic = { version = "0.13", features = ["codegen"] }
tonic-health = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5"